--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -5,6 +5,9 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +15,9 @@
   <tbody>
     <% @beers.each do |beer| %>
       <tr>
+        <td><%= beer.name %></td>
+        <td><%= beer.description %></td>
+        <td><%= beer.price %></td>
         <td><%= link_to 'Show', beer %></td>
         <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
         <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
