--- a/BOB/css/bob.css
+++ b/BOB/css/bob.css
@@ -1,3 +1,17 @@
+a img {
+	float: left;
+	width: 48px;
+	height: 50px;
+	margin-top: -15px;
+}
+
+.bold { font-weight: bold; }
+
+.contact-background {
+	background:tan !important;
+	color:#231410 !important;
+}
+
  .row-bottom-margin { margin-bottom:5px; }
  
  .btn-text-color { 
